# Fastapi-Websocket-Cookiecutter

./: .drone.yml  .gitignore  README.md  cookiecutter.json  pyproject.toml  test.sh  test_worker_service.sh
{{cookiecutter.project_directory}}/: .dockerignore  .drone.yml  .env.cookiecutter  .env.example  .pre-commit-config.yaml  README.md  create_env.sh  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-test.yml  pyproject.toml  pytest.ini  service_down.sh  service_up.sh  test.sh
{{cookiecutter.project_directory}}/app/: __init__.py  config.py  containers.py  db.py  exceptions.py  main.py  models.py  pre_start.py  security.py  utils.py
{{cookiecutter.project_directory}}/app/broker/: __init__.py  broker_utils.py  task_pipelines.py  tasks.py
{{cookiecutter.project_directory}}/app/constants/: __init__.py  error_codes.py  responses.py  roles.py  socketio_namespaces.py
{{cookiecutter.project_directory}}/app/initial/: initial_data.py
{{cookiecutter.project_directory}}/app/repositories/: __init__.py  auth.py  base.py  user.py
{{cookiecutter.project_directory}}/app/routers/: __init__.py  auth.py  event.py  health.py  user.py  view.py  ws.py
{{cookiecutter.project_directory}}/app/schemas/: __init__.py  auth.py  generic.py  user.py
{{cookiecutter.project_directory}}/dockerfiles/: Dockerfile.dev  Dockerfile.prod  Dockerfile.test
{{cookiecutter.project_directory}}/script/: service_startup.sh  start_test.sh  worker_startup.sh
{{cookiecutter.project_directory}}/tests/: conftest.py  initial_test_data.py  test_utils.py  test_worker_tasks.py
(+17 files in other folders)
